Bug 635346 - allow relations for document accessible defined on document content, r=fer, a=davidb