accessible/src/base/AccIterator.cpp
@@ -104,7 +104,8 @@ AccIterator::IteratorState::IteratorState(nsAccessible *aParent,
 RelatedAccIterator::
   RelatedAccIterator(nsDocAccessible* aDocument, nsIContent* aDependentContent,
                      nsIAtom* aRelAttr) :
-  mRelAttr(aRelAttr), mProviders(nsnull), mBindingParent(nsnull), mIndex(0)
+  mDocument(aDocument), mRelAttr(aRelAttr), mProviders(nsnull),
+  mBindingParent(nsnull), mIndex(0)
 {
   mBindingParent = aDependentContent->GetBindingParent();
   nsIAtom* IDAttr = mBindingParent ?
@@ -112,7 +113,7 @@ RelatedAccIterator::
 
   nsAutoString id;
   if (aDependentContent->GetAttr(kNameSpaceID_None, IDAttr, id))
-    mProviders = aDocument->mDependentIDsHash.Get(id);
+    mProviders = mDocument->mDependentIDsHash.Get(id);
 }
 
 nsAccessible*
@@ -129,9 +130,14 @@ RelatedAccIterator::Next()
     if (provider->mRelAttr == mRelAttr &&
         (!mBindingParent ||
          mBindingParent == provider->mContent->GetBindingParent())) {
-      nsAccessible* related = GetAccService()->GetAccessible(provider->mContent);
+      nsAccessible* related = mDocument->GetAccessible(provider->mContent);
       if (related)
         return related;
+
+      // If the document content is pointed by relation then return the document
+      // itself.
+      if (provider->mContent == mDocument->GetContent())
+        return mDocument;
     }
   }
 
